Fix z-indexes

--- a/less/blocks/site-list.less
+++ b/less/blocks/site-list.less
@@ -30,7 +30,7 @@
     width: 350px;
 
     position: absolute;
-
+    z-index: 1;
     left: 31px;
     bottom: -58px;
 
